FIXES FOR INTRO and P1 and P2

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -3,17 +3,20 @@
 First, a quick overview of AI past, present, and (possible) futures:
 
 **The Past:**
+
 * Before 2000: AI with super-human logic, but no intuition.
     * (and safety problems with AI Logic)
 * After 2000: AI that can learn “intuition”, but has poor logic.
     * (and safety problems with AI "Intuition")
 
 **The Present:**
+
 * The arms race to milk current AI methods
 * The quest to merge AI logic *and* intuition
 * The awkward alliances in AI Safety
 
 **The Possible Futures:**
+
 * Timelines: When will we get “human-level general AI”, if ever?
 * Takeoffs: How quickly will AI self-improve?
 * Trajectories: Are we on track to the Good Place or the Bad Place?
@@ -41,6 +44,7 @@ Anyway! To *vastly oversimplify* the history of AI & AI Safety, these fields had
 **Before 2000: AI with super-human logic, but no intuition.** (also called "Symbolic AI")
 
 Safety problems with AI Logic:
+
 * Accomplishes goals in logical-but-unwanted ways.
 * Doesn't understand common-sense or humane values.
 * According to game theory, most AI goals logically lead to sub-goals like "resist shutdown" or "grab resources".
@@ -48,6 +52,7 @@ Safety problems with AI Logic:
 **After 2000: AI that can learn general "intuition", but has poor logic.** (also called "Deep Learning")
 
 Safety problems with AI "Intuition":
+
 * AI learns our biases, prejudices, inhumanity.
 * AI "intuition" breaks easily, sometimes in dangerous ways.
 * AI is a "black box": we can't understand or verify what it's doing.
@@ -96,7 +101,7 @@ Hat tip to [Victoria Krakovna (2023)](https://vkrakovna.wordpress.com/2023/08/09
 * 1990: The second AI Winter.
 * 2000: The rise of machine learning. (AI that learns)
 * 2010: The rise of deep learning. (Neural network-based AI that learns)
-* 2020: Deep learning goes mainstream! (ChatGPT, DALL-E, etc)
+* 2020: Deep learning goes mainstream, with "Generative AI"! (ChatGPT, DALL-E, etc)
 
 ---
 
@@ -418,8 +423,7 @@ Then in the 2010's, partly thanks to cheaper GPUs[^gpu], ANNs *finally* got thei
 * In 2022, OpenAI released the ChatGPT chatbot and DALL-E 2 image-generator, which was the public’s first *real* taste of ANNs, in form of cool & slightly-terrifying gadgets. This success jump-started the current AI arms race.
 * Most recently as of May 2024: OpenAI teased at Sora, their AI video-generator. It's not yet public, but they've published a music video with it. [:Just *look* at this fever dream.](https://www.youtube.com/watch?v=f75eoFyo9ns)
 
-[^alexnet]: [(Krizhevsky, Sutskever, Hinton 2012)](https://proceedings.neurips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf). Fun anecdote: “[Hinton] didn’t know anything about the field of computer vision, so he took two young guys to change it all! One of them [Alex Krizhevsky] he locked up in a room, telling him: “You can’t
-come out until it works!” [...] [Alex] didn’t understand anything at all, like he was 17.” (from [Cardon, Cointet & Mazières 2018](https://mazieres.gitlab.io/neurons-spike-back/NeuronsSpikeBack.pdf))
+[^alexnet]: [(Krizhevsky, Sutskever, Hinton 2012)](https://proceedings.neurips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf). Fun anecdote: “[Hinton] didn’t know anything about the field of computer vision, so he took two young guys to change it all! One of them [Alex Krizhevsky] he locked up in a room, telling him: “You can’t come out until it works!” [...] [Alex] didn’t understand anything at all, like he was 17.” (from [Cardon, Cointet & Mazières 2018](https://mazieres.gitlab.io/neurons-spike-back/NeuronsSpikeBack.pdf))
 
 [^goodfellow]: [IJ Goodfellow (2014), *Generative Adversarial Networks*](http://papers.neurips.cc/paper/5423-generative-adversarial-nets.pdf)
 
@@ -687,7 +691,7 @@ Let's look at the trends:
 
 [^ai-scaling]: See [Kaplan et al 2020](https://arxiv.org/pdf/2001.08361.pdf), Figure 1, Panel 1: as Compute increases from 10<sup>-7</sup> to 10<sup>-1</sup>, a million-fold increase, Test Loss goes from ~6.0 to ~3.0, a halving of its error.
 
-Moore's Law & AI Scaling Laws are usually cited as reasons to expect a "Technological Singularity" soon. [:There's even a T-Shirt.](#Shirt)
+Moore's Law & AI Scaling Laws are usually cited as reasons to expect a "Technological Singularity" soon. [:There's even a T-Shirt!](#Shirt)
 
 But, counter-arguments: there's good reason to believe Moore's Laws & AI Scaling Laws will conk out soon.
 
@@ -728,9 +732,11 @@ But, counter-counter-arguments:
 
 #### :x shirt
 
-![Person with a shirt that reads: "SCALE IS ALL YOU NEED - AGI IS COMING" above three graphs demonstrating the 'AI scaling laws'](https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Scale_is_all_you_need%2C_AGI_is_coming.jpg/1600px-Scale_is_all_you_need%2C_AGI_is_coming.jpg?20230708123255)
+![Person with a shirt that reads: "SCALE IS ALL YOU NEED - AGI IS COMING" above three graphs demonstrating the 'AI scaling laws'](../media/p1/shirt.jpg)
 
-Photo by [Jamie Decillion on Wikipedia](https://commons.wikimedia.org/wiki/File:Scale_is_all_you_need,_AGI_is_coming.jpg). Graphs from Figure 1 of [Kaplan et al 2020](https://arxiv.org/pdf/2001.08361.pdf).
+Shirt design & photo by [@jordiae](https://x.com/jordiae/status/1416090858152243204). Graphs from Figure 1 of [Kaplan et al 2020](https://arxiv.org/pdf/2001.08361.pdf).
+
+**Update Nov 2025:** Mea culpa, the original version of this post attributed the shirt to a Wikipedia poster, who it turned out [had stolen & misattributed Jordi's photo](https://commons.wikimedia.org/wiki/Commons:Deletion_requests/File:Scale_is_all_you_need,_AGI_is_coming.jpg). For shame! 
 
 ---
 
@@ -788,7 +794,9 @@ I suspect the next fundamental advance for AI will be finding a way to *seamless
 
 Don't take *my* word for it! In 2019, Yoshua Bengio — one of the founders of Deep Learning, and co-winners of Computer Science’s “Nobel Prize” — gave a talk titled: *“From System 1 Deep Learning to System 2 Deep Learning”*. His talk was about how current methods will run dry unless we change course, then he proposes some stuff to try.[^bengio-s1-s2]
 
-On top of Bengio's suggestions, there have been many other attempts to merge System 1 & 2 in AI: Hybrid AI, Bio-inspired AI, Neuro-symbolic AI, etc...
+On top of Bengio's suggestions, there have been many other attempts to merge System 1 & 2 in AI: Hybrid AI, Bio-inspired AI, Neuro-Symbolic AI[^marcus], etc...
+
+[^marcus]: The famous "AGI pessimist" Gary Marcus is probably the most well-known proponent of [Neuro-Symbolic AI](https://garymarcus.substack.com/p/how-o3-and-grok-4-accidentally-vindicated), AI that mixes the best of Good Ol' Fashioned AI (symbolic) and modern deep learning (neural networks).
 
 [^sys-1-2]: The “dual-process” model of cognition was first suggested by [\(Wason & Evans, 1974\)](https://pages.ucsd.edu/~scoulson/203/wason-evans.pdf), and developed by multiple folks over decades. But the idea got *really* popular after Daniel Kahneman, winner of the 2002 Nobel Memorial Prize in Economics, wrote his bestselling 2011 book, [Thinking, Fast & Slow](https://en.wikipedia.org/wiki/Thinking,_Fast_and_Slow).
 
@@ -1029,6 +1037,8 @@ Other notes on AI Consciousness:
 * One reason to *not* be cruel to a non-conscious AI: your interactions will likely go into some future AI's training data, and *that* AI will learn — "correctly" — to be cruel.
 * As Kurt Vonnegut once wrote: *“We are what we pretend to be, so we must be careful about what we pretend to be.”* And that's why I always start my ChatGPT conversations with "Hello!" and end with "Thank you, see you later!"
 
+**update nov 2025:** In the 1.5 years between when I started this series and now, "AI Consciousness" has become a bit more mainstream. Not, like, *mainstream* mainstream, but one of the leading AI labs, Anthropic, recently hired [a full-time "AI Welfare" researcher](https://arstechnica.com/ai/2024/11/anthropic-hires-its-first-ai-welfare-researcher/), whose work has led to [actual changes to the product](https://www.anthropic.com/research/end-subset-conversations).
+
 #### :x Altman on Georgism
 
 From [Altman (2021)](https://moores.samaltman.com/):
@@ -1040,6 +1050,8 @@ From [Altman (2021)](https://moores.samaltman.com/):
 > We could do something called the American Equity Fund. The American Equity Fund would be capitalized by taxing companies above a certain valuation 2.5% of their market value each year, [...] and by taxing 2.5% of the value of all privately-held land[.]
 >
 > All citizens over 18 would get an annual distribution, in dollars and company shares, into their accounts. People would be entrusted to use the money however they needed or wanted — for better education, healthcare, housing, starting a company, whatever.
+
+But will Sam Altman *actually* keep his promise to fight for a corporate-tax-funded UBI? Keep in mind that Sam Altman is notorious for being, uh, ["not completely candid"](https://garymarcus.substack.com/p/sam-altmans-pants-are-totally-on).
 
 ---
 
@@ -1213,6 +1225,10 @@ AI's capabilities may accelerate at first, but then it'll grow at a steady pace,
 <u>Experts who predict this</u>: Ramez Naam[^naam-et-al]
 
 [^naam-et-al]: For a more detailed & mathematical explanation of Naam's argument, check out [my 3-minute summary here](https://blog.ncase.me/backlog/#project_10).
+
+. . .
+
+**Update Nov 2025:** The forecasts for AGI _in general_ are different from the forecasts for Large Language Models (eg ChatGPT, Claude, Gemini, Grok, etc) _specifically_. As of writing, it seems the tide is turning against "LLMs can scale up to become AGI". Richard Sutton, pioneer of Reinforcement Learning & author of the famous ["just add scale" manifesto](http://www.incompleteideas.net/IncIdeas/BitterLesson.html), now believes [LLMs are a dead end](https://www.youtube.com/watch?v=21EYKqUsPfg). Toby Ord, researcher at Oxford's AI Governance Initiative, and who published a book estimating a 10% chance of extinction from AI, has been writing a lot on [how bad](https://www.tobyord.com/writing/inefficiency-of-reinforcement-learning) [LLMs are](https://www.tobyord.com/writing/mostly-inference-scaling) [scaling](https://www.tobyord.com/writing/how-well-does-rl-scale).
 
 . . .
 
