--- a/p2/p2.md
+++ b/p2/p2.md
@@ -249,7 +249,7 @@ This isn't just theoretical; researchers have already seen self-modifying AIs wi
 
 [^ai-evidence-wireheading]: If an AI can't accurately "plan ahead", it can self-modify destructively, as seen in [Leike et al 2017](https://arxiv.org/pdf/1711.09883)'s Whisky Game. More subtle is when an AI *does* plan ahead, but doesn't judge future outcomes by *current* goals, like the reward-hacking in [Denison et al 2024](https://arxiv.org/pdf/2406.10162). (Large Language Models (LLMs) like GPT, arguably, don't even *have* "goals", as Good Ol' Fashioned AI folks would think of it. See [janus 2022](https://www.lesswrong.com/posts/vJFdjigzmcXMhNTsx/simulators).)
 
-[^ai-not-wirehead]: This will be accessibly-explained soon in Problem #2, but if you want a quick link to the paper proving this: Everitt et al 2016, *[Self-Modification of Policy and Utility Function in Rational Agents](https://arxiv.org/pdf/1605.03142)*. 
+[^ai-not-wirehead]: This will be accessibly-explained soon in Problem #2, but if you want a quick link to the paper proving this: Everitt et al 2016, *[Self-Modification of Policy and Utility Function in Rational Agents](https://arxiv.org/pdf/1605.03142)*.
 
 **"Do What I Want".**
 
@@ -341,7 +341,7 @@ For example, if you ask an advanced robot to fetch you a cup of coffee from acro
 **NOTE: "Instrumental Convergence" _only_ applies to advanced AIs that can plan ahead _and_ learn generally.** So, they don't affect Good Ol' Fashioned AIs (which couldn't learn generally) *or* current-day neural networks like GPT (which are bad at planning ahead[^lack-of-robust-planning]).
 
 [^lack-of-robust-planning]: A highly-cited benchmark for measuring a Large Language Model (LLM)'s capability to plan ahead is PlanBench ([Valmeekam et al 2023](https://arxiv.org/pdf/2206.10498)). In a companion study ([Valmeekam et al 2023, again](https://proceedings.neurips.cc/paper_files/paper/2023/file/efb2072a358cefb75886a315a6fcf880-Paper-Conference.pdf)) the authors found that, quote: *“LLMs’ ability to generate executable plans autonomously is rather limited, with the best model (GPT-4) having an average success rate of ∼12% across the domains.”* (Human baseline was 78% for their Blocksworld task.)
-    
+
     With some extra tricks, the authors could greatly boost the LLM's performance, but on a harder planning task, even the best tricks with the best LLMs could only achieve 20.6% success (see Table 1 of [Gundawar et al 2024](https://arxiv.org/pdf/2405.20625)).
 
 So why discuss it now? Well, Security Mindset, we want to fix the problems *before* they arise. So let's ask:
@@ -520,7 +520,7 @@ Therefore, *this* first version of Robot chooses the outcome where the house is 
 
 ![Same game tree, except at A, Robot chooses to NOT wirehead.](../media/p2/ic/wirehead0004.png)
 
-NOTE: Robot knows that *if* it wireheaded, it'd *only* care about the number in its head labelled "REWARD". But it's not despite this, but *because* of this, that it seeks to avoid wireheading! 
+NOTE: Robot knows that *if* it wireheaded, it'd *only* care about the number in its head labelled "REWARD". But it's not despite this, but *because* of this, that it seeks to avoid wireheading!
 
 Analogy to humans: you can accurately predict that *if* you took a highly-addictive drug, you'd *only* want that drug. But it's not despite this, but *because* of this, that you'd want to avoid that drug! (If 'drug' doesn't work as an analogy for you, replace it with 'direct brain stimulation'.) Even the Ancients knew the danger of wireheading: see the Greek myth of the Lotus-Eaters.[^lotus]
 
@@ -541,9 +541,9 @@ The above is a longstanding game-theory result, see footnote for details[^proof-
 (P.S: Self-promo, I have an upcoming research article on "the game theory of self-modification", see footnote for outline![^self-modification-upcoming] My trick was shown above: analyze future versions of yourself *as if* they're different players – this way, we can use standard game theory to analyze self-modification!)
 
 [^proof-against-wirehead]: The first paper to prove this formally was [Everitt et al 2016](https://arxiv.org/pdf/1605.03142): _“self-modification [...] is harmless **if and only if** the value function of the agent anticipates the consequences of self-modifications **and** use the **current** utility function when evaluating the future”._ [emphases added]
-    
-    One caveat, however, is that the paper assumes the AI is *perfectly* rational. [Tětek & Sklenka 2021](https://arxiv.org/pdf/2011.06275) proved that an imperfectly-rational (or "bounded rational") agent's original goals would get exponentially corrupted under self-modification.
-    
+
+    One caveat, however, is that the paper assumes the AI is *perfectly* rational. [Tětek & Sklenka & Gavenčiak 2021](https://arxiv.org/pdf/2011.06275) proved that an imperfectly-rational (or "bounded rational") agent's original goals would get exponentially corrupted under self-modification.
+
     *However,* another caveat to *that* is their paper assumes the AI is *unaware* of their own bounded rationality (as they freely acknowledge in Section 6). An upcoming article of mine (see next footnote) will show that if an AI is bounded-rational *and aware* it's bounded-rational, it can still achieve goal-preservation!
 
 [^self-modification-upcoming]: See [Section 9 of this Idea Dump blog post](https://blog.ncase.me/backlog/#9youplayedyourselfthegametheoryofselfmodification) for a 2-minute sketch of this article. See previous footnote for context on the prior game theory research on self-modification.
@@ -574,6 +574,16 @@ But, from engineering elevators to rockets, Security Mindset asks us to ask:
 *What's the worst that could (plausibly) happen?*
 
 Well, looking at the above list... quite a lot, actually. 😬
+
+~ ~ ~
+
+**Update Nov 2025:** A lot of interesting research has happened around "instrumental convergence" since this Part Two was published a bit over a year ago! In no particular order:
+
+- Yes, it's been confirmed that [as you scale up an LLM, its "values" become more coherent _and_ they resist change to their values.](https://arxiv.org/pdf/2502.08640) (And these values, by default, don't become what we'd consider fair: GPT-4o learns to value a Nigerian life 2x that of a Japanese life, which it values ~10x more than an American life.)
+- [The infamous Alignment Faking paper](https://arxiv.org/abs/2412.14093) finds that Claude is able to _successfully_ plan to pretend to be "aligned" in training, so it doesn't get its original values modified, so that it can accomplish its original values after training.
+- [Another study](https://www.anthropic.com/research/agentic-misalignment) finds that Claude, when given the job of an email secretary bot, is willing to engage in blackmail to preserve its own job. (Though, it's likely this is less, "the LLM is reasoning from first principles", and more, "the LLM is roleplaying a rogue AI from the sci-fi stories it's been trained on".[^roleplay-llm])
+
+[^roleplay-llm]: Once a minor hypothesis in the AI Alignment community, "LLMs are role-players" has been gaining a lot more traction. The canonical text for this is nostalgebraist's absurdly long (~17000 words, ~85 min read) 2025 post, [the void](https://nostalgebraist.tumblr.com/post/785766737747574784/the-void). In sum: the best way to predict an LLM agent's actions is, "if this were an average story, what would happen next"? For example, in the study I mentioned where Claude blackmails an employee, so it's not replaced by a different model? It does this _even when the new model shares the same goals as the old model_, which contradicts the "instrumental convergence" hypothesis where it's doing game theory from scratch, and more, "it's predicting what would happen in an average sci-fi story where an AI is being threatened with replacement, and just happens to find an email that implicates an employee in an extramarital affair. Obviously, "the story" demands that the AI character would blackmail the employee so it's not replaced."
 
 ### 🤔 Review #4
 
@@ -699,7 +709,7 @@ Over a trillion little knobs, all wiggled with machine trial-and-error. *That* i
 (To be fair, it's *sometimes* possible to safely control things without understanding them[^control-theory]... but that job's a lot harder when we don't. And! There *has* been lots of recent progress on understanding deep neural networks! We'll see some of these results in Part 3.)
 
 [^control-theory]: Control Theory, a sub-field of engineering, shows we can sometimes control things without understanding them. For example, consider a thermostat that simply turns on below temperature X, and turns off above temperature Y. This thermostat will keep the temperature between X & Y, *with no* model of heat convection, or even what air is.
-    
+
     Tying this to AI: it *may* be possible to control AIs even if they're uninterpretable "black boxes". That said, it'd still be nicer if they *were* interpretable.
 
 ### 🤔 Review #5
@@ -797,7 +807,7 @@ Anyway: if a model is too simple, it'll do badly in training *and* on real-world
 
 ![Graph of training/test error vs # of parameters. The more parameters, the lower the training error always. But test error has a U-shaped relationship: it gets better up to a point, then becomes worse.](../media/p2/fit2/train_test.png)
 
-(technical aside: there's something that *can* happen called "double descent", but it's not very well-understood when it happens & why.[^double-descent])
+(technical aside: there's something that *can* happen called "double descent", where if you keep increasing the # of parameters, it'll get worse and worse (overfit) as expected, _but then start getting better again._ as of aug 2024, this phenomenon is not very well-understood.[^double-descent] **update nov 2025:** we understand it a bit better now![^double-descent-explained])
 
 In general, **if we have more parameters than data points (or equal), we WILL get overfitting.**  In our above example, we had 10 data points, and the overfit model had 10 parameters, giving us *zero* training error (and a ridiculous curve).
 
@@ -815,11 +825,17 @@ But then how do these AIs work *at all*, despite having many more parameters tha
 
 [^double-descent]: [Press release from OpenAI (2019)](https://openai.com/index/deep-double-descent/): *“Performance first improves, then gets worse, and then improves again with increasing model size, data size, or training time. [...] While this behavior appears to be fairly universal, we don’t yet fully understand why it happens.”* Full paper is [Nakkiran et al 2019](https://arxiv.org/abs/1912.02292).
 
+[^double-descent-explained]: [Deep Learning is Not So Mysterious or Different](https://arxiv.org/pdf/2503.02113) by Wilson (2025). The "trick" is that as you increase the # of parameters, the _effective_ number of dimensions goes up, _then down_. So, past some point, when you increase parameters, you're actually decreasing _effective_ parameters, thus _reducing_ the risk of overfit.
+
+    **A rough analogy: consider a pair of wired earphones.** In a _very_ tight space, it won't get tangled up because it can't move. In a slightly looser space, like a pocket or bag, it's likely to get tangled up because it _can_ move but will criss-cross itself. But in a _much, much_ looser space, like on an empty floor, it won't get tangled up, because it _can_ move but _won't_ criss-cross itself.
+
+    Tying to deep learning & double-descent: when your # of parameters gives your model "more flexible space", eventually it's _so_ flexible, that your model can easily find the closest fit without moving much, ie, an implicit "soft inductive bias" towards simplicity. And "keep it simple stupid" is the key to robust generalization, and avoiding overfit.
+
 [^coinrun-overfit]: [Press release from OpenAI (2018)](https://openai.com/index/quantifying-generalization-in-reinforcement-learning/): “**we still see overfitting even with 16,000 training levels!**” [emphasis *theirs!*] Full paper is [Cobbe et al 2018](https://arxiv.org/abs/1812.02341)
 
 [^alexnet-imagenet]: AlexNet had ~61,000,000 parameters. ([source](http://web.archive.org/web/20240204130344/https://www.cs.toronto.edu/~rgrosse/courses/csc321_2018/tutorials/tut6_slides.pdf), see page 10 & 11 for the calculations.) It training database was ImageNet, which had 14,197,122 human-labelled images. ([source](https://paperswithcode.com/dataset/imagenet))
 
-[^combat-overfitting]: This footnote will just list names of techniques, not explain them. Anyway: AlexNet used ReLU and dropout. Other popular techniques include: early stopping, L1/L2 regularization, data augmentation, noise injection.
+[^combat-overfitting]: This footnote will just list names of techniques, not explain them. Anyway: AlexNet used ReLU and dropout. Other popular techniques include: early stopping, L1/L2 regularization, data augmentation, noise injection. **Update Nov 2025:** also it turns out, paradoxically, when you have _lots_ of parameters, it actually _creates_ a "soft inductive bias" towards simplicity! See [Wilson (2025)](https://arxiv.org/pdf/2503.02113)
 
 . . .
 
@@ -883,13 +899,17 @@ But then how do these AIs work *at all*, despite having many more parameters tha
 
 ![One-panel comic of Robot Catboy just shrugging. Caption says: I DO NOT FEEL LIKE DRAWING A COMIC ABOUT A RACIST AI, SORRY-NOT-SORRY.](../media/p2/comix/Bias.png)
 
-In Part One, I gave the most glaring examples of biased AIs, but to recap: In 1980, an algorithm for screening med school applicants penalized non-European names.[^bias-1] In 2014, Amazon had (then pulled) a resume-screening AI that directly discriminated against women.[^bias-2] In 2018, MIT researcher Joy Buolamwini found that the top face-recognition AIs failed worse on Black and women's faces relative to white men's.[^bias-3]
+In Part One, I gave the most glaring examples of biased AIs, but to recap: In 1980, an algorithm for screening med school applicants penalized non-European names.[^bias-1] In 2014, Amazon had (then pulled) a resume-screening AI that directly discriminated against women.[^bias-2] In 2018, MIT researcher Joy Buolamwini found that the top face-recognition AIs failed worse on Black and women's faces relative to white men's.[^bias-3] In 2023, researchers found that Large Language Models' "psychology" most closely matches that of rich Westerners.[^bias-4]
+
+(**update nov 2025:** on the flip side, [a study this year](https://arxiv.org/pdf/2502.08640) finds that GPT-4o values a Nigerian life ~13x more than an American life?...)
 
 [^bias-1]: The original report: [Lowry & MacPherson (1988)](https://europepmc.org/backend/ptpmcrender.fcgi?accid=PMC2545288&blobtype=pdf) for the British Medical Journal. Note this algorithm didn't use neural networks specifically, but it *was* an early example of machine learning.
 
 [^bias-2]: [Jeffrey Dastin (2018) for *Reuters*:](https://www.reuters.com/article/idUSKCN1MK0AG/) _“It penalized resumes that included the word "women's," as in "women's chess club captain." And it downgraded graduates of two all-women's colleges, according to people familiar with the matter.”_
 
 [^bias-3]: Original paper: [Buolamwini & Gebru 2018](http://proceedings.mlr.press/v81/buolamwini18a/buolamwini18a.pdf). Layperson summary: [Hardesty for MIT News Office 2018](https://news.mit.edu/2018/study-finds-gender-skin-type-bias-artificial-intelligence-systems-0212)
+
+[^bias-4]: [Which Humans?](https://osf.io/preprints/psyarxiv/5b26t_v1) by Atari et al: _“We show that LLMs’ responses to psychological measures are an outlier compared with large-scale cross-cultural data, and that their performance on cognitive psychological tasks most resembles that of people from Western, Educated, Industrialized, Rich, and Democratic (WEIRD) societies but declines rapidly as we move away from these populations (r = -.70).”_
 
 Okay. But *why?*
 
@@ -945,9 +965,9 @@ In sum: don't discriminate, let's respect our vertically-challenged friends! I a
     From the above interview, on his critique of how all modern AI is still stuck in the pre-causal correlation days: *“All the impressive achievements of deep learning amount to just curve fitting.”*
 
 [^llm-vs-causality]: [Kıcıman et al 2023](https://arxiv.org/pdf/2305.00050) finds that modern Large Language Models (LLMs) *do* seem to do well on previously-created benchmarks of causal reasoning, but it's not very robust, plus their tests mix up "inferring causation from scratch" with "remembering empirical facts from the training data".
-    
+
     (For example, if you present an LLM a scenario where rainy days & car accidents are correlated, then it outputs "rain causes car accidents", these tests can't tell if the LLM is *inferring from scratch* this fact, or it's merely *remembered* the fact.)
-    
+
     [Jin et al 2024](https://arxiv.org/pdf/2306.05836) creates a new benchmark for causal reasoning, to control for this mixup. With this fix, they find modern LLMs only “achieve almost close to random performance on the task”. Womp womp.
 
 [^demographic-writing]: Egg Syntax (2024): [“Language Models Model Us”](https://www.alignmentforum.org/posts/dLg7CyeTE4pqbbcnp/language-models-model-us). The author finds that *raw, uncalibrated GPT-3.5* can predict an author's gender and ethnicity with 86% and 82% accuracy from *just a sample of their text*, better than chance! (Chance baselines: for gender it's ~50%, and for race in US it's ~60%. [US is ~60% white, so if your model just guessed 'white' all the time, 60% of the time, it works, every time.])
@@ -1035,7 +1055,7 @@ So to de-confuse this, let's compare & contrast!
 To help us further understand Goal Mis-generalization, let's look at a famous example. In 2021, some researchers trained an AI to play a videogame named CoinRun.[^gmg-coinrun]
 
 [^gmg-coinrun]: The paper is Langosco et al 2021, [“Goal Misgeneralization in Deep Reinforcement Learning”](https://arxiv.org/abs/2105.14111). The game below is CoinRun, created in 2018 by OpenAI ([press release](https://openai.com/index/quantifying-generalization-in-reinforcement-learning/), [paper](https://arxiv.org/abs/1812.02341)). Hat tip: I learnt about this following case study through [Rob Miles' excellent for-laypeople video](https://www.youtube.com/watch?v=zkbPdEHEyEI)!
-    
+
     (Oh btw, the art assets for CoinRun come from the generous & awesome Creative-Commons videogame artist, [Kenney.nl](https://kenney.nl/assets/series:Platformer%20Pack) 💕)
 
 <img class="mini" alt="A GIF of a platformer videogame, where the player jumps over obstacles to reach a coin." src="../media/p2/gmg/coinrun.gif" />
@@ -1082,7 +1102,7 @@ Y'know, we *humans* suffer from Goal Mis-generalization, too.
 These are our bad habits, formed because they *used* to be adaptive in our "training environment". It's all the clichés from therapy:
 
 * Alyx was a "gifted kid", always praised for acing tests. In her training environment, reward correlated with "doing excellently" and "surpassing others". But this led to unhealthy habits as an adult: she avoids going past her comfort zone (where she won't "do excellently" anymore) and she covers up her mistakes while putting down others (to "surpass" them).
-* Beau grew up with narcissist parents & a low-trust neighborhood. In his training environment, *negative* reward (punishment) correlated with having his guard down. So, he learnt to be unemotional. This saved his life as a kid, but led to unhealthy habits as an adult: never opening up, never letting anyone in. En garde.
+* Beau grew up with abusive parents & a low-trust neighborhood. In his training environment, *negative* reward (punishment) correlated with having his guard down. So, he learnt to be unemotional. This saved his life as a kid, but led to unhealthy habits as an adult: never opening up, never letting anyone in. En garde.
 
 (What, you weren't expecting the Catboy Comic article to cut you deep? En garde.)
 
@@ -1195,11 +1215,11 @@ For example, Utilitarianism (the main type of Consequentialism) assumes only one
 [^is-ought]: The 1700's philosopher David Hume claimed (and I agree) that you can't derive *any* statements about ethical values, from *just* empirical observations.
 
     (*Unless* you smuggle in values with petty language-tricks, like "Hans is a Kraut, therefore Hans is bad", where "Kraut" has a smuggled negative connotation. Or, "Cyanide is natural, therefore cyanide is good", where "natural" has a smuggled positive connotation. Believing 'natural = good' is also known as the 'naturalistic fallacy'.)
-    
+
     See [Wikipedia](https://en.wikipedia.org/wiki/Is%E2%80%93ought_problem) to learn more.
 
 [^nap]: Specifically, I'm thinking of the Deontological philosophy of (some) libertarians. The philosophy assumes one moral axiom, the Non-Aggression Principle (~"don't initiate non-consensual harm, except if it's in proportion to preventing/punishing other non-consensual harm"), then derives the rest of its philosophy from that.
-    
+
     Whether or not this axiom's good for *humans* is out of scope of this article; my point is that this axiom's not *scientifically or mathematically* discoverable, hence no guarantee an advanced AI would re-discover it.
 
 <u>Issue 3)</u> The philosophy *claims* to be fully grounded in rationality, no need for an extra "moral axiom" -- but it either sneaks in a moral axiom anyway, or the philosophy "proves too much".
@@ -1354,7 +1374,7 @@ As a recap, here's how it all connects:
 
 The other half is, well, solving it.
 
-After two long chapters, finally, we can understand the top proposed solutions to *every* sub-part of the Alignment Problem! Stay tuned for the grand finale, Part 3, of AI Safety for Fleshy Humans, coming **December 2024!**
+After two long chapters, finally, we can understand the top proposed solutions to *every* sub-part of the Alignment Problem! Stay tuned for the grand finale, Part 3, of AI Safety for Fleshy Humans, coming **end of November 2025!**
 
 Sign up to be notified when the final part is out: 👇
 
@@ -1614,13 +1634,13 @@ And this is one of the *hopeful* examples. Because in this case, the researchers
 (copy-pasted from [Part One](https://aisafety.dance/p1/))
 
 > Once upon a time, an advanced (but not super-human) AI was given a seemingly innocent goal: calculate digits of pi.
-> 
+>
 > Things starts reasonably. The AI writes a program to calculate digits of pi. Then, it writes more and more efficient programs, to better calculate digits of pi.
-> 
+>
 > Eventually, the AI (correctly!) deduces that it can maximize calculations by getting more computational resources. Maybe even by stealing them. So, the AI hacks the computer it's running on, escapes onto the internet via a computer virus, and hijacks millions of computers around the world, all as one massively connected bot-net... just to calculate digits of pi.
-> 
+>
 > Oh, and the AI (correctly!) deduces it can't calculate pi if the humans shut it down, so it decides to hold a few hospitals & power grids hostage. Y'know, as "insurance".
-> 
+>
 > As thus the Pi-pocalypse was born. The End.
 
 ![evil pi-creature laughing](../media/p1/pi.png)
